# cleanstack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  compose.yaml  justfile  pyproject.toml
.github/workflows/: lint.yml  release-please.yml  tests.yml
app/api/: app.py  dependencies.py  exceptions.py  filters.py  lifespan.py  sort.py  utils.py
app/api/containers/: router.py
app/api/dependencies/: domain.py  mongo.py  sql.py
app/api/items/: router.py
app/api/tags/: router.py
app/core/: app.py  config.py  context.py  init.py  settings.py
app/core/context/: mongo.py  sql.py
app/core/logging/: config-dev.json
app/dependencies/fastapi/: dependencies.py  mongo.py  sql.py
app/domain/: context.py  domain.py  entities.py  protocols.py
app/domain/container/: entities.py
app/domain/containers/: commands.py  entities.py  repository.py
app/domain/items/: commands.py  entities.py  repository.py
app/domain/nodes/: entities.py
app/domain/tags/: commands.py  entities.py  repository.py
app/infrastructure/mongo/: containers.py  items.py  tags.py  utils.py
app/infrastructure/sql/: containers.py  items.py  tables.py  tags.py  utils.py
cleanstack/: __init__.py  base.py  domain.py  entities.py  exceptions.py  handlers.py  logger.py  uow.py  utils.py
cleanstack/domain/: __init__.py  context.py  domain.py  exceptions.py  repository.py  uow.py
cleanstack/domain/handlers/: __init__.py  base.py  command.py  query.py
cleanstack/entities/: __init__.py  base.py  pagination.py  sort.py
cleanstack/factories/: __init__.py  base.py  mongo.py  sql.py
cleanstack/factories/mongo/: __init__.py  base.py
cleanstack/factories/sql/: __init__.py  base.py
cleanstack/fastapi/: exceptions.py  logger.py
cleanstack/infrastructure/: exceptions.py  utils.py
cleanstack/infrastructure/mongo/: __init__.py  base.py  builder.py  entities.py  uow.py  utils.py
cleanstack/infrastructure/mongo/asynchronous/: repository.py
cleanstack/infrastructure/mongo/synchronous/: repository.py
cleanstack/infrastructure/mongodb/: logger.py  uow.py
cleanstack/infrastructure/sql/: __init__.py  base.py  builder.py  entities.py  logger.py  uow.py  utils.py
cleanstack/infrastructure/sql/asynchronous/: repository.py
cleanstack/infrastructure/sql/synchronous/: repository.py
cleanstack/mongo/: __init__.py  builder.py  mixin.py  utils.py
cleanstack/mongo/asynchronous/: repository.py
cleanstack/mongo/synchronous/: repository.py
cleanstack/sql/: __init__.py  builder.py  entities.py  mixin.py  utils.py
cleanstack/sql/asynchronous/: repository.py
cleanstack/sql/synchronous/: repository.py
protests/: fixtures.py  session.py
protests/factories/: items.py  utils.py
protests/infrastructure/mongo/: fixtures.py  test_repository.py
protests/infrastructure/sql/: fixtures.py  test_repository.py
tests/: conftest.py  test_domain.py  utils.py
tests/_app/core/: context.py
tests/_app/domain/: context.py  domain.py
tests/_app/domain/items/: commands.py  entities.py  port.py
tests/_app/infrastructure/: adapter.py
tests/api/containers/: test_router.py
tests/api/items/: __init__.py  test_pagination.py  test_router.py  test_search.py
tests/api/items/test_filters/: test_bool.py  test_datetime.py  test_numeric.py  test_optional.py  test_primary_key.py  test_strenum.py  test_string.py  test_uuid.py
tests/api/items/test_sort/: test_datetime.py  test_numeric.py  test_string.py
tests/api/tags/: __init__.py  test_router.py
tests/domain/: test_items.py
tests/factories/: conftest.py  containers.py  entities.py  factories.py  items.py  tags.py  test_factories.py  utils.py
tests/fastapi/: app.py  conftest.py  test_exceptions.py
tests/fixtures/: factories.py  fastapi.py  mongo.py  repository.py  settings.py  sql.py
tests/init/: adapters.py  context.py  domain.py  registry.py  uow.py
tests/plugins/: database.py  factories.py  http.py  settings.py
