[project]
name = "cleanstack"
# use dynamic version to avoid sync issues with uv.lock after 'release-please'
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
mongo = [
    "pymongo>=4.16.0",
]
sql = [
    "psycopg[binary]>=3.3.3",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.1.0",
    "ruff==0.15.17",
    "ty==0.0.49",
    "protest",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "httpx2>=2.4.0",
]

[tool.uv.sources]
protest = { git = "https://github.com/renaudcepre/protest.git", tag = "protest-v0.2.0" }

[tool.setuptools.packages.find]
include = ["cleanstack*"]

[tool.ruff]
output-format = "concise"
[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401", # any-type
    "PLR0911", # Too many return statements (7 > 6)
    "PLR0913", # Too many arguments in function definition (6 > 5)
    "SIM117", # multiple-with-statements
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
disable_error_code = [
    "prop-decorator",
]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
log_file = ".pytest_cache/tests.log"
log_file_level = "info"
log_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
